--- a/playbooks/set_variables.yml
+++ b/playbooks/set_variables.yml
@@ -8,7 +8,7 @@
       include_tasks: "clouds/add_nodes_{{ cloud_name }}.yml"
       with_items: "{{ nodes|default(omit) }}"
 
-    - name: Initialize the ambari_groups list
+    - name: Initialize the ambari_groups and atscale_groups lists
       set_fact:
         ambari_groups: []
 
@@ -18,7 +18,7 @@
             ambari_groups: "{{ ambari_groups }} + [ '{{ item.host_group }}' ]"
           when: groups[item.host_group] is defined and groups[item.host_group]|length > 0 and 'AMBARI_SERVER' in item.services
           with_items: "{{ blueprint_dynamic }}"
-          no_log: True
+          no_log: False
       when: blueprint_file == 'blueprint_dynamic.j2'
 
     - block:
