--- a/playbooks/install_atscale.yml
+++ b/playbooks/install_atscale.yml
@@ -1,9 +1,9 @@
 ---
 - import_playbook: "set_atscale_variables.yml"
 
-- name: Apply the atscale role to the atscale-server group
+- name: Apply the krb5-client role and atscale role to the atscale-server group
   hosts: atscale-server
   any_errors_fatal: true
   become: yes
   roles:
-    - atscale
+    - role: atscale
